@@ -22,6 +22,8 @@
 package org.wandora.application.tools.iot;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import org.json.JSONObject;
@@ -57,8 +59,8 @@ public class GeolocationSource extends AbstractIoTSource implements IoTSource {
     
 
     @Override
-    public boolean matches(String url) throws MalformedURLException {
-        URL u = new URL(url);
+    public boolean matches(String url) throws MalformedURLException, URISyntaxException {
+        URL u = new URI(url).toURL();
         return u.getHost().equals(HOST) && u.getPath().equals(PATH);
     }
 
