@@ -35,6 +35,7 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.Writer;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.Iterator;
@@ -57,14 +58,16 @@ import org.wandora.utils.fileserver.SimpleFileServerClient;
  */
 public class MoveSubjectLocatorResources extends AbstractWandoraTool {
 
-    private String host;
+    private static final long serialVersionUID = 1L;
+    
+	private String host;
     private int port;
     private String user;
     private String password;
     boolean useSSL;
     private String filePrefix;
     
-    public MoveSubjectLocatorResources(Context preferredContext) {
+    public MoveSubjectLocatorResources(Context<?> preferredContext) {
         this();
         setContext(preferredContext);
     }
@@ -157,9 +160,9 @@ public class MoveSubjectLocatorResources extends AbstractWandoraTool {
         return sb.toString();
     }
     
-    public void execute(Wandora wandora, Context context) throws TopicMapException  {
+    public void execute(Wandora wandora, Context<?> context) throws TopicMapException  {
         setDefaultLogger();        
-        Iterator iter=context.getContextObjects();
+        Iterator<?> iter=context.getContextObjects();
         java.net.Socket s=null;
         try{
             log("Connectiong to file server");
@@ -194,7 +197,7 @@ public class MoveSubjectLocatorResources extends AbstractWandoraTool {
                 URLConnection c=null;
                 InputStream urlIn=null;
                 try{
-                    url=new URL(t.getSubjectLocator().toExternalForm());
+                    url=new URI(t.getSubjectLocator().toExternalForm()).toURL();
                     c=authorizer.getAuthorizedAccess(url);
                     urlIn=c.getInputStream();
                 
