@@ -36,6 +36,7 @@ import java.awt.Dimension;
 import java.awt.Graphics;
 import java.awt.image.BufferedImage;
 import java.io.File;
+import java.net.URI;
 import java.net.URL;
 
 import javax.imageio.ImageIO;
@@ -73,7 +74,7 @@ public class JPanelWithBackground extends JPanel {
         if(imageLocator != null) {
             image = null;
             try {
-                this.url = new URL(imageLocator);
+                this.url = new URI(imageLocator).toURL();
                 this.image = ImageIO.read(url);
                 //System.out.println("ImagePanel initialized with URL "+ imageLocator);
             }
